--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rumah Tenang - Your Authentic Malaysian Escape</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
@@ -92,32 +95,32 @@
             <div class="row g-4">
                 <div class="col-md-4">
                     <a href="images/gallery-1.jpg" data-toggle="lightbox" data-gallery="rumah-tenang-gallery">
-                        <img src="images/gallery-1.jpg" alt="Gallery Image 1" class="img-fluid rounded gallery-img">
+                        <img src="images/gallery-1.webp" alt="Gallery Image 1" class="img-fluid rounded gallery-img" loading="lazy">
                     </a>
                 </div>
                 <div class="col-md-4">
                     <a href="images/gallery-2.jpg" data-toggle="lightbox" data-gallery="rumah-tenang-gallery">
-                        <img src="images/gallery-2.jpg" alt="Gallery Image 2" class="img-fluid rounded gallery-img">
+                        <img src="images/gallery-2.webp" alt="Gallery Image 2" class="img-fluid rounded gallery-img" loading="lazy">
                     </a>
                 </div>
                 <div class="col-md-4">
                     <a href="images/gallery-3.jpg" data-toggle="lightbox" data-gallery="rumah-tenang-gallery">
-                        <img src="images/gallery-3.jpg" alt="Gallery Image 3" class="img-fluid rounded gallery-img">
+                        <img src="images/gallery-3.webp" alt="Gallery Image 3" class="img-fluid rounded gallery-img" loading="lazy">
                     </a>
                 </div>
                 <div class="col-md-4">
                     <a href="images/gallery-4.jpg" data-toggle="lightbox" data-gallery="rumah-tenang-gallery">
-                        <img src="images/gallery-4.jpg" alt="Gallery Image 4" class="img-fluid rounded gallery-img">
+                        <img src="images/gallery-4.webp" alt="Gallery Image 4" class="img-fluid rounded gallery-img" loading="lazy">
                     </a>
                 </div>
                 <div class="col-md-4">
                     <a href="images/gallery-5.jpg" data-toggle="lightbox" data-gallery="rumah-tenang-gallery">
-                        <img src="images/gallery-5.jpg" alt="Gallery Image 5" class="img-fluid rounded gallery-img">
+                        <img src="images/gallery-5.webp" alt="Gallery Image 5" class="img-fluid rounded gallery-img" loading="lazy">
                     </a>
                 </div>
                 <div class="col-md-4">
                     <a href="images/gallery-6.jpg" data-toggle="lightbox" data-gallery="rumah-tenang-gallery">
-                        <img src="images/gallery-6.jpg" alt="Gallery Image 6" class="img-fluid rounded gallery-img">
+                        <img src="images/gallery-6.webp" alt="Gallery Image 6" class="img-fluid rounded gallery-img" loading="lazy">
                     </a>
                 </div>
             </div>
@@ -129,7 +132,7 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-md-6 text-center" data-aos="fade-right">
-                    <img src="https://i.pravatar.cc/400?img=5" alt="The Hosts" class="img-fluid rounded-circle w-75">
+                    <img src="https://i.pravatar.cc/400?img=5" alt="The Hosts" class="img-fluid rounded-circle w-75" loading="lazy">
                 </div>
                 <div class="col-md-6" data-aos="fade-left">
                     <h2 class="mb-3">Meet Your Hosts</h2>
@@ -196,7 +199,7 @@
                 <div class="col-md-4" data-aos="fade-up" data-aos-delay="100">
                     <div class="card h-100">
                         <div class="card-body text-center">
-                            <img src="https://i.pravatar.cc/100?img=1" class="rounded-circle mb-3" alt="Guest 1">
+                            <img src="https://i.pravatar.cc/100?img=1" class="rounded-circle mb-3" alt="Guest 1" loading="lazy">
                             <p class="card-text">"The most peaceful place I've ever been. The food was amazing and the hosts were so welcoming. A true Malaysian gem!"</p>
                             <footer class="blockquote-footer">Ahmad, Kuala Lumpur</footer>
                         </div>
@@ -205,7 +208,7 @@
                 <div class="col-md-4" data-aos="fade-up" data-aos-delay="200">
                     <div class="card h-100">
                         <div class="card-body text-center">
-                            <img src="https://i.pravatar.cc/100?img=2" class="rounded-circle mb-3" alt="Guest 2">
+                            <img src="https://i.pravatar.cc/100?img=2" class="rounded-circle mb-3" alt="Guest 2" loading="lazy">
                             <p class="card-text">"My family and I had a wonderful time. The kids loved the village tour and the cooking class. We'll be back!"</p>
                             <footer class="blockquote-footer">Siti, Johor Bahru</footer>
                         </div>
@@ -214,7 +217,7 @@
                 <div class="col-md-4" data-aos="fade-up" data-aos-delay="300">
                     <div class="card h-100">
                         <div class="card-body text-center">
-                            <img src="https://i.pravatar.cc/100?img=3" class="rounded-circle mb-3" alt="Guest 3">
+                            <img src="https://i.pravatar.cc/100?img=3" class="rounded-circle mb-3" alt="Guest 3" loading="lazy">
                             <p class="card-text">"A perfect escape from the city. Waking up to the sound of birds and the view of the paddy fields was magical."</p>
                             <footer class="blockquote-footer">Chen, Penang</footer>
                         </div>
@@ -275,13 +278,10 @@
         </div>
     </footer>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-    <script type="module" src="https://cdn.jsdelivr.net/npm/bs5-lightbox@1.8.3/dist/index.bundle.min.js"></script>
-    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-    <script>
-      AOS.init();
-    </script>
-    <script src="js/main.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" defer></script>
+    <script type="module" src="https://cdn.jsdelivr.net/npm/bs5-lightbox@1.8.3/dist/index.bundle.min.js" defer></script>
+    <script src="https://unpkg.com/aos@next/dist/aos.js" defer></script>
+    <script src="js/main.js" defer></script>
 
     <!-- Back to Top Button -->
     <a href="#hero" id="back-to-top" class="btn btn-primary rounded-circle"><i class="bi bi-arrow-up"></i></a>
